# colmap2transforms

./: README.md  pyproject.toml
colmap2transforms/: __init__.py  colmap2transforms.py  colmap2xmp.py  common.py  transforms2colmap.py
test/: __init__.py  test_round_trip.py  transforms.json
test/test_data/: frame_00001.xmp  frame_00002.xmp
