[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "colmap2transforms"
version = "0.1.0"
description = "Utilities for converting between COLMAP sparse models and transforms.json files."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Christopher Howard", email = "cehoward@kersplody.com" },
]
keywords = ["colmap", "nerfstudio", "transforms", "photogrammetry", "3d-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.23",
    "pycolmap",
]

[project.urls]
Homepage = "https://github.com/kersplody/colmap2transforms"
Repository = "https://github.com/kersplody/colmap2transforms"
Issues = "https://github.com/kersplody/colmap2transforms/issues"

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[project.scripts]
colmap2transforms = "colmap2transforms.colmap2transforms:entrypoint"
transforms2colmap = "colmap2transforms.transforms2colmap:entrypoint"

[tool.setuptools]
packages = ["colmap2transforms"]

[tool.pytest.ini_options]
testpaths = ["test"]
